ajustes de links relativos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -254,7 +254,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/mulher-negra-vestindo-moletom-verde-e-sorrindo.png"
+            src="./assets/mulher-negra-vestindo-moletom-verde-e-sorrindo.png"
             alt="Mulher negra vestindo moletom verde e sorrindo"
           />
         </div>
@@ -457,7 +457,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
+            src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
             alt="Médico feliz segurando uma prancheta com pacientes ao lado"
           />
         </div>
@@ -552,7 +552,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
+            src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
             alt="Homem negro com moletom bege mexendo no celular e sorrindo"
           />
         </div>
@@ -730,6 +730,6 @@
 
     <!-- ScrollReveal Lib -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
