--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/mulher-negra-vestindo-moletom-verde-e-sorrindo.png"
+            src="./assets/mulher-negra-vestindo-moletom-verde-e-sorrindo.png"
             alt="Mulher negra vestindo moletom verde e sorrindo"
           />
         </div>
@@ -465,7 +465,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
+            src="./assets/doutor-feliz-segurando-prancheta-com-pacientes.png"
             alt="Médico feliz segurando uma prancheta com pacientes ao lado"
           />
         </div>
@@ -703,7 +703,7 @@
 
         <div class="col-b">
           <img
-            src="/assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
+            src="./assets/homem-negro-com-moletom-bege-mexendo-no-celular.png"
             alt="Homem negro com moletom bege mexendo no celular e sorrindo"
           />
         </div>
