--- a/index.html
+++ b/index.html
@@ -884,6 +884,6 @@
     <!-- Swiper -->
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
     <!-- Main -->
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
