--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 
             <a
               class="button"
-              href="https://wa.me/5511987654321"
+              href="https://wa.me"
               target="_blank"
             >
               <svg
